--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>nebulas-smart-contracts-lint</title>
+
+    <style>
+
+    </style>
   </head>
   <body>
     <noscript>
